# movies-go

./: .dockerignore  .env.example  .gitignore  .gitversion  Dockerfile  README.md  RELEASING.md  config.yml.example  dev.sh  docker-compose.yml  go.mod  go.sum  nginx.conf.example
api/: Dockerfile  blocked.json  pyproject.toml
api/app/: __init__.py  admin.py  bot.py  config.py  main.py  myshows.py  rate_limit.py  settings_cache.py  stats.py  tasks.py  templates.py  test.py  tmdb_utils.py  utils.py  ws_manager.py
api/app/api/: auth.py  dependencies.py  devices.py  episodes.py  myshows_sync.py  plugin_settings.py  (+4 more)
api/lampa-plugins/: int.js  lm.js  lm_profiles.js  myshows.js  np.js  np_profiles.js  np_profiles2.js  reset.js  status.js  surs_local.js
api/migrations/: cleanup_timecode_hashes.py  migrate_episodes.py  migrate_favorite.py  migrate_lampa_profile_child_params.py  migrate_myshows_full.py  migrate_number_of_episodes.py  migrate_plugin_settings.py  migrate_plugin_settings_profile.py  migrate_runtime.py  migrate_timecodes_views.py  migrate_trusted_devices.py
api/templates/: _admin_links.html  actor.html  admin_dashboard.html  admin_login.html  admin_settings.html  backup_codes.html  base.html  card_detail.html  catalog.html  catalog_category.html  consent.html  forgot_password.html  history.html  index.html  login.html  macros.html  privacy.html  profile.html  profile_key_once.html  profiles.html  register.html  register_success.html  reset_password.html  sessions.html  setup_2fa.html  stats_dashboard.html  stats_login.html  tg_miniapp.html  verify_2fa.html
(+225 files in other folders)
